Update Netlify configuration for deployment

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -5,6 +5,11 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# Next.js plugin configuration
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Disable blob storage for CLI deployments
+[build.processing]
+  skip_processing = false
 
